--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -158,7 +158,10 @@
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
         <p tabindex="0">Køb dine blomster i vores butikker</p>
-        <p tabindex="0">Bestil dit abonnement på vores webshop</p>
+        <p tabindex="0">
+          Bestil dit abonnement på vores webshop - psst! Du får 15% på din
+          første levering
+        </p>
       </div>
       <!-- LOGO DESKTOP START -->
       <section tabindex="0">
@@ -341,7 +344,7 @@
         class="bg-hero_image bg-cover px-[30px] pt-l-spacing-mobile text-center lg:h-hero-height lg:px-xxxl-spacing-desktop lg:py-l-spacing-mobile lg:pb-m-spacing-desktop"
       >
         <article
-          class="mx-auto border-2 border-sol-300 pt-m-spacing-mobile text-sol-300 lg:h-hero-border-height lg:pt-xxl-spacing-mobile"
+          class="mx-auto border-2 border-sol-300 px-10 pt-m-spacing-mobile text-sol-300 lg:h-hero-border-height lg:pt-xxl-spacing-mobile"
         >
           <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
             Abonnement
@@ -356,6 +359,11 @@
           >
             Med et blomsterabonnement fra Blomster Bjarne kan du nyde et udvalg
             af årstidens blomster leveret direkte til din hoveddør.
+            <br />
+            <br />
+            <strong class="text-h5-mobile lg:text-h5-desktop">
+              Du kan lige nu få 15% på din første levering!</strong
+            >
           </p>
         </article>
         <div class="mt-l-spacing-desktop pb-xs-spacing-mobile">
