--- a/src/logind.html
+++ b/src/logind.html
@@ -88,7 +88,10 @@
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
         <p tabindex="0">Køb dine blomster i vores butikker</p>
-        <p tabindex="0">Bestil dit abonnement på vores webshop</p>
+        <p tabindex="0">
+          Bestil dit abonnement på vores webshop - psst! Du får 15% på din
+          første levering
+        </p>
       </div>
       <!-- LOGO DESKTOP START -->
       <section tabindex="0">
