--- a/src/blomster.html
+++ b/src/blomster.html
@@ -41,7 +41,7 @@
         max-width: 100%;
         max-height: 100%;
       }
-      .article_wrapper img {
+      article img {
         height: 100%;
         width: 100%;
       }
