--- a/src/index.html
+++ b/src/index.html
@@ -980,10 +980,15 @@
         >
           Anmeldelser
         </h2>
+        <p
+          class="pt-s-spacing-mobile text-center font-font-body text-abonnement-text-info"
+        >
+          Læs herunder anmeldelser fra nogle af vores fantastiske kunder!
+        </p>
         <article
           itemscope
           itemtype="https://schema.org/Review"
-          class="carousel-center carousel h-[235px] overflow-y-hidden overflow-x-scroll lg:mt-xl-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
+          class="carousel-center carousel h-[235px] overflow-y-hidden overflow-x-scroll lg:mt-l-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
         >
           <div itemprop="review" class="carousel-item">
             <div class="snap-center lg:w-[500px]">
