--- a/src/information.html
+++ b/src/information.html
@@ -112,7 +112,7 @@
   </head>
   <body>
     <!-- header -->
-    <header>
+    <header class="pb-l-spacing-desktop">
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
@@ -302,7 +302,7 @@
       <!--------------------------------------------------------------------- LOG IND -->
       <section
         id="loginbox"
-        class="placering_box gemt fixed top-2 left-0 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
+        class="placering_box gemt fixed top-2 left-0 z-10 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
       >
         <div class="login_opret grid grid-cols-2 items-center">
           <div class="logind flex items-center px-[30px]">
@@ -410,7 +410,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
+              <p class="overskrift -ml-2">Betal</p>
               <div class="bar3">
                 <div class="ball3">
                   <p class="tal">3</p>
