--- a/src/kurv.html
+++ b/src/kurv.html
@@ -104,7 +104,7 @@
   </head>
   <body>
     <!-- header -->
-    <header>
+    <header class="pb-l-spacing-desktop">
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
@@ -294,7 +294,7 @@
       <!--------------------------------------------------------------------- LOG IND -->
       <section
         id="loginbox"
-        class="placering_box gemt fixed top-2 left-0 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
+        class="placering_box gemt fixed top-2 left-0 z-10 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
       >
         <div class="login_opret grid grid-cols-2 items-center">
           <div class="logind flex items-center px-[30px]">
@@ -411,7 +411,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-1 lg:-ml-9">Tak!</p>
+              <p class="overskrift -ml-1">Tak!</p>
               <div class="bar4">
                 <div class="ball4">
                   <p class="tal">4</p>
