--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -131,10 +131,7 @@
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
         <p tabindex="0">Køb dine blomster i vores butikker</p>
-        <p tabindex="0">
-          Bestil dit abonnement på vores webshop - psst! Du får 15% på din
-          første levering
-        </p>
+        <p tabindex="0">Bestil dit abonnement på vores webshop</p>
       </div>
       <!-- LOGO DESKTOP START -->
       <section tabindex="0">
@@ -281,13 +278,13 @@
 
         <ul class="secondary_nav">
           <li>
-            <button id="konto" tabindex="0">
+            <a tabindex="0" href="logind.html">
               <img
                 class="person h-8 w-8"
                 src="img/ikoner/person.svg"
                 alt="Gå til din konto"
               />
-            </button>
+            </a>
           </li>
           <li>
             <a tabindex="0" href="kurv.html">
@@ -312,90 +309,6 @@
     </header>
 
     <main>
-      <!--------------------------------------------------------------------- LOG IND -->
-      <section
-        id="loginbox"
-        class="placering_box gemt fixed top-2 left-0 z-20 mx-10 max-h-screen max-w-[600px] border-2 border-color-black bg-background-color pb-xl-spacing-mobile text-center font-font-body lg:left-[25%]"
-      >
-        <div class="login_opret grid grid-cols-2 items-center">
-          <div class="logind flex items-center px-[30px]">
-            <img
-              class="pr-s-spacing-mobile"
-              src="/img/ikoner/radio.svg"
-              alt="radio button log ind"
-            />
-            <p>Log ind</p>
-          </div>
-          <div
-            class="opret flex items-center border-2 border-t-0 border-r-0 border-color-black px-[30px] pl-[10px]"
-          >
-            <img
-              class="pr-s-spacing-mobile"
-              src="/img/ikoner/radio_un.svg"
-              alt="radio button opret bruger"
-            />
-            <p>Opret konto</p>
-          </div>
-        </div>
-
-        <div class="content px-[30px] pt-m-spacing-mobile font-font-body">
-          <h2
-            class="overskrift1 pb-m-spacing-mobile font-other-headings text-h3-mobile lg:text-h3-desktop"
-          >
-            Log ind
-          </h2>
-
-          <p class="pb-xs-spacing-mobile font-font-body text-body-mobile">
-            Har du bruger hos os, og vil gerne give feedback eller købe vores
-            abonnement? Log venligst ind ved hjælp af formularen nedenfor. Har
-            du ikke en bruger, skal du først
-            <a class="underline hover:text-rust-500" href=""
-              >oprette en bruger</a
-            >.
-          </p>
-
-          <form class="grid gap-m-spacing-mobile text-left">
-            <div class="email grid gap-xs-spacing-mobile">
-              <label class="font-other-headings text-body-mobile" for="email"
-                >E-mail</label
-              >
-              <input
-                class="rounded-radius-mobile p-4 pl-2 lg:p-5 lg:pl-2"
-                type="email"
-                inputmode="email"
-                placeholder="Fx. google@gmail.com"
-              />
-            </div>
-
-            <div class="password grid gap-xs-spacing-mobile">
-              <label class="font-other-headings text-body-mobile" for="password"
-                >Adgangskode</label
-              >
-              <input
-                class="rounded-radius-mobile p-4 pl-2 lg:p-5 lg:pl-2"
-                type="text"
-                inputmode="text"
-                placeholder="Indeholder min. 6 karakterer"
-              />
-            </div>
-
-            <a
-              class="glemt text-center font-font-body text-body-mobile text-color-headings underline hover:text-rust-500"
-              href="#"
-              >Har du glemt dit kodeord?</a
-            >
-            <div class="grid justify-center">
-              <a
-                id="luk"
-                tabindex="0"
-                class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
-                href=""
-                >Log ind</a
-              >
-            </div>
-          </form>
-        </div>
-      </section>
       <section>
         <!-- PROGRESS BAR START -->
         <article
@@ -488,94 +401,56 @@
 
     <!--------------------------------------------------------------------- FOOTER -->
     <footer
-      itemscope
-      itemtype="https://schema.org/LocalBusiness"
       tabindex="0"
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
     >
       <article
         class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
       >
-        <!-- primær indhold -->
         <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
-          <!-- butikker -->
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h2 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
+            <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
               BUTIKKER
-            </h2>
+            </h4>
 
             <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
-              <address
-                itemprop="address"
-                itemscope
-                itemtype="https://schema.org/PostalAddress"
-                tabindex="0"
-                class="strandvejen"
-              >
-                <p itemprop="streetAddress">Strandvejen 167</p>
+              <address tabindex="0" class="strandvejen">
+                <p>Strandvejen 167</p>
+                <p>2900 Hellerup</p>
+                <p>Danmark</p>
                 <p>
-                  <span itemprop="postalCode">2900</span
-                  ><span itemprop="addressLocality"> Hellerup</span>
-                </p>
-                <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="tel:+4539629059"></a> Tlf.:
-                  <span itemprop="telephone">+45 39 62 90 59</span>
+                  <a href="tel:+4539629059"></a>
+                  Tlf.: +45 39 62 90 59
                 </p>
               </address>
 
-              <address
-                itemprop="address"
-                itemscope
-                itemtype="https://schema.org/PostalAddress"
-                tabindex="0"
-                class="gunnar"
-              >
-                <p itemprop="streetAddress">Gunnar Nu Hansens Pl. 6</p>
-                <p>
-                  <span itemprop="postalCode">2100</span
-                  ><span itemprop="addressLocality"> København Ø</span>
-                </p>
-                <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="tel:+4536260700"></a>
-                  Tlf.: <span itemprop="telephone">+45 36 26 07 00</span>
-                </p>
+              <address tabindex="0" class="gunnar">
+                <p>Gunnar Nu Hansens Pl. 6</p>
+                <p>2100 København Ø</p>
+                <p>Danmark</p>
+                <p><a href="tel:+4536260700"></a>Tlf.: +45 36 26 07 00</p>
               </address>
 
-              <address
-                itemprop="address"
-                itemscope
-                itemtype="https://schema.org/PostalAddress"
-                tabindex="0"
-                class="vaernedamsvej"
-              >
-                <p itemprop="streetAddress">Værnedamsvej 4A st.</p>
-                <p>
-                  <span itemprop="postalCode">1619</span
-                  ><span itemprop="addressLocality"> København V</span>
-                </p>
-                <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="tel:+4526117006"></a>Tlf.:
-                  <span itemprop="telephone">+45 26 11 70 06</span>
-                </p>
+              <address tabindex="0" class="vaernedamsvej">
+                <p>Værnedamsvej 4A st.</p>
+                <p>1619 København V</p>
+                <p>Danmark</p>
+                <p><a href="tel:+4526117006"></a>Tlf.: +45 26 11 70 06</p>
               </address>
             </div>
           </section>
 
-          <!-- information links -->
           <section
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
-            <h2
+            <h4
               tabindex="0"
               class="text-h4-mobile lg:pb-l-spacing-desktop lg:text-h4-desktop"
             >
               INFORMATIONER
-            </h2>
+            </h4>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
                 <a tabindex="0" href="#">Om os</a>
@@ -589,19 +464,12 @@
             </div>
           </section>
 
-          <!-- åbningstider -->
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h2 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
+            <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
               ÅBNINGSTIDER
-              <meta
-                itemprop="openingHours"
-                content="Mo,Tu,We,Th,Fr 10:00-18:00"
-              />
-              <meta itemprop="openingHours" content="Sa 10:00-15:00" />
-              <meta itemprop="openingHours" content="Su 11:00-16:00" />
-            </h2>
+            </h4>
             <div class="tider grid grid-cols-2">
               <div
                 class="dage grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
@@ -628,16 +496,15 @@
             </div>
           </section>
 
-          <!-- følg os her links -->
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
-            <h2
+            <h4
               tabindex="0"
               class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop"
             >
               FØLG OS HER
-            </h2>
+            </h4>
             <div class="ikoner flex place-content-center gap-m-spacing-mobile">
               <svg
                 tabindex="0"
@@ -680,7 +547,6 @@
           </section>
         </div>
 
-        <!-- sekundær indhold  -->
         <section
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
