--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -232,7 +232,7 @@
               <li class="pt-[0.18cm]">
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
+                  class="dropdown-content w-52 border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:border-x-2 lg:border-b-2 lg:border-color-black lg:text-body-desktop"
                   href="blomster.html"
                   >Blomster</a
                 >
@@ -240,7 +240,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
+                  class="dropdown-content w-52 bg-background-color p-4 font-font-body text-body-mobile lg:border-x-2 lg:border-b-2 lg:border-color-black lg:text-body-desktop"
                   href="vaser.html"
                   >Vaser</a
                 >
