--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -149,7 +149,8 @@
   <body class="bg-background-color">
     <!--------------------------------------------------------------------- HEADER -->
     <!-- header -->
-    <header>
+
+    <header class="pb-l-spacing-desktop">
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
@@ -269,7 +270,7 @@
               <li class="pt-[0.18cm]">
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
+                  class="dropdown-content w-52 border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:border-x-2 lg:border-b-2 lg:border-color-black lg:text-body-desktop"
                   href="blomster.html"
                   >Blomster</a
                 >
@@ -277,7 +278,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
+                  class="dropdown-content w-52 bg-background-color p-4 font-font-body text-body-mobile lg:border-x-2 lg:border-b-2 lg:border-color-black lg:text-body-desktop"
                   href="vaser.html"
                   >Vaser</a
                 >
