--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -126,7 +126,7 @@
   <body class="bg-background-color">
     <!--------------------------------------------------------------------- HEADER -->
     <!-- header -->
-    <header class="pb-l-spacing-desktop">
+    <header>
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
