--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -153,7 +153,7 @@
   </head>
   <body>
     <!-- header -->
-    <header class="pb-l-spacing-desktop">
+    <header>
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
