--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -154,8 +154,9 @@
   <body>
     <!-- header -->
     <header>
+      <!-- banner  -->
       <div
-        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
+        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-banner_text"
       >
         <p tabindex="0">Køb dine blomster i vores butikker</p>
         <p tabindex="0">
@@ -454,13 +455,13 @@
               >Har du glemt dit kodeord?</a
             >
             <div class="grid justify-center">
-              <a
+              <button
                 id="luk"
                 tabindex="0"
                 class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
-                href=""
-                >Log ind</a
               >
+                Log ind
+              </button>
             </div>
           </form>
         </div>
