--- a/src/betal_bekraeft.html
+++ b/src/betal_bekraeft.html
@@ -126,8 +126,9 @@
   <body>
     <!-- header -->
     <header class="pb-l-spacing-desktop">
+      <!-- banner  -->
       <div
-        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
+        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-banner_text"
       >
         <p tabindex="0">Køb dine blomster i vores butikker</p>
         <p tabindex="0">
