--- a/src/blomster.html
+++ b/src/blomster.html
@@ -86,8 +86,9 @@
     </a>
     <!-- header -->
     <header>
+      <!-- banner  -->
       <div
-        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
+        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-banner_text"
       >
         <p tabindex="0">Køb dine blomster i vores butikker</p>
         <p tabindex="0">
@@ -205,7 +206,7 @@
               <li class="pt-[0.18cm]">
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:border-x-2 lg:border-b-2 lg:border-color-black lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black border-t-transparent bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="blomster.html"
                   >Blomster</a
                 >
@@ -213,7 +214,7 @@
               <li>
                 <a
                   tabindex="0"
-                  class="dropdown-content w-52 bg-background-color p-4 font-font-body text-body-mobile lg:border-x-2 lg:border-b-2 lg:border-color-black lg:text-body-desktop"
+                  class="dropdown-content w-52 border-x-2 border-b-2 border-color-black bg-background-color p-4 font-font-body text-body-mobile lg:text-body-desktop"
                   href="vaser.html"
                   >Vaser</a
                 >
@@ -386,13 +387,13 @@
               >Har du glemt dit kodeord?</a
             >
             <div class="grid justify-center">
-              <a
+              <button
                 id="luk"
                 tabindex="0"
                 class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
-                href=""
-                >Log ind</a
               >
+                Log ind
+              </button>
             </div>
           </form>
         </div>
@@ -786,7 +787,7 @@
         </article>
         <!-- dry flower (venstre) card -->
         <article class="hover:scale-105">
-          <!-- forside -->
+          <!------------------ forside -->
           <div class="article_wrapper relative">
             <div class="billede">
               <div class="arrow">
@@ -808,7 +809,7 @@
                 Vinget Hindebæger
               </h3>
             </div>
-            <!-- bagsiden -->
+            <!------------------ bagsiden -->
             <div
               class="article_info flip absolute -left-[2px] -top-1 z-50 h-[calc(150%+28px)] w-[calc(200%+26px)] border-2 border-color-black bg-color-white lg:h-[calc(100%+6px)] lg:w-[calc(100%+4px)]"
             >
@@ -818,9 +819,11 @@
               >
                 Vinget Hindebæger
               </h3>
+              <!-- informationer om blomst -->
               <div
                 class="flex flex-col gap-s-spacing-mobile py-l-spacing-mobile px-xs-spacing-mobile"
               >
+                <!-- oprindelse/slægt -->
                 <div class="flex gap-xs-spacing-mobile">
                   <img
                     class="h-7 w-7"
@@ -834,6 +837,7 @@
                     Slægt af Vingebæger-familien, stammer fra Middelhavsområdet
                   </h4>
                 </div>
+                <!-- sollys -->
                 <div class="flex gap-xs-spacing-mobile">
                   <img
                     class="h-7 w-7"
@@ -846,6 +850,7 @@
                     Tåler direkte sollys
                   </h4>
                 </div>
+                <!-- vanding -->
                 <div class="flex gap-xs-spacing-mobile">
                   <img
                     class="h-7 w-7"
@@ -860,6 +865,7 @@
                     potter, og egner sig derfor fint til altandyrkning
                   </h4>
                 </div>
+                <!-- pris i butik -->
                 <div class="flex gap-xs-spacing-mobile">
                   <img
                     class="h-7 w-7"
@@ -877,6 +883,7 @@
             </div>
           </div>
         </article>
+
         <!-- eucalyptus card -->
         <article class="hover:scale-105">
           <!-- forside -->
