--- a/src/logind.html
+++ b/src/logind.html
@@ -340,12 +340,13 @@
               >Har du glemt dit kodeord?</a
             >
             <div class="grid justify-center py-xl-spacing-mobile lg:pt-[70px]">
-              <a
+              <button
                 tabindex="0"
                 class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
                 href="blomster.html"
-                >Log ind</a
               >
+                Log ind
+              </button>
             </div>
           </form>
         </div>
