--- a/src/abonnement2.html
+++ b/src/abonnement2.html
@@ -473,7 +473,7 @@
           >
             <!-- CARD 1 -->
             <article
-              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile cursor-pointer rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
@@ -493,7 +493,7 @@
 
             <!-- CARD 2 -->
             <article
-              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile cursor-pointer rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
@@ -545,7 +545,7 @@
           >
             <!-- CARD 3 -->
             <article
-              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile cursor-pointer rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
@@ -565,7 +565,7 @@
 
             <!-- CARD 4 -->
             <article
-              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile cursor-pointer rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
