--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -132,6 +132,7 @@
           height: 1.15em;
           border: 0.15em solid black;
           border-radius: 50%;
+          cursor: pointer;
         }
 
         @media (min-width: 900px) {
