--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -468,7 +468,7 @@
 
       <!---------------------------------------------- ANDEN SEKTION -->
       <select
-        class="max-w-xs mx-auto flex w-64 rounded-radius-mobile border-2 border-color-black font-font-body text-body-mobile lg:text-body-desktop"
+        class="max-w-xs mx-auto flex w-64 cursor-pointer rounded-radius-mobile border-2 border-color-black font-font-body text-body-mobile lg:text-body-desktop"
       >
         <option disabled selected>-- Vælg hyppighed --</option>
         <option class="active:bg-sol">Hver uge</option>
