--- a/src/betal.html
+++ b/src/betal.html
@@ -521,7 +521,7 @@
           <!-- metoder -->
           <div class="flex flex-col gap-[20px] lg:mt-m-spacing-desktop">
             <div
-              class="w-[330px card grid h-[50px] justify-center border-2 border-color-black hover:scale-110 lg:h-[100px] lg:w-[490px]"
+              class="w-[330px card grid h-[50px] cursor-pointer justify-center rounded-radius-desktop border-2 border-color-black hover:scale-110 lg:h-[80px] lg:w-[490px]"
             >
               <h4
                 class="m-auto font-font-body text-body-mobile lg:text-body-desktop"
@@ -531,7 +531,7 @@
             </div>
 
             <div
-              class="card grid h-[50px] w-[330px] justify-center border-2 border-color-black hover:scale-110 lg:h-[100px] lg:w-[490px]"
+              class="card grid h-[50px] w-[330px] cursor-pointer justify-center rounded-radius-desktop border-2 border-color-black hover:scale-110 lg:h-[80px] lg:w-[490px]"
             >
               <h4
                 class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
