--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -466,14 +466,16 @@
             />
           </div>
           <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body"
           >
             <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
+              class="spand color-black pb-2 text-abonnement-text-spand lg:text-abonnement-text-info"
             >
               Spandens mål: 60x50x40 cm
             </p>
-            <div class="info flex justify-between">
+            <div
+              class="info flex justify-between lg:mt-s-spacing-desktop lg:text-button-desktop"
+            >
               <p>Mini</p>
               <p>400,- DKK</p>
             </div>
@@ -492,14 +494,16 @@
             />
           </div>
           <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body"
           >
             <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
+              class="spand color-black pb-2 text-abonnement-text-spand lg:text-abonnement-text-info"
             >
               Spandens mål: 60x50x40 cm
             </p>
-            <div class="info flex justify-between">
+            <div
+              class="info flex justify-between lg:mt-s-spacing-desktop lg:text-button-desktop"
+            >
               <p>Lille</p>
               <p>600,- DKK</p>
             </div>
@@ -518,14 +522,16 @@
             />
           </div>
           <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body"
           >
             <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
+              class="spand color-black pb-2 text-abonnement-text-spand lg:text-abonnement-text-info"
             >
               Spandens mål: 80x60x50 cm
             </p>
-            <div class="info flex justify-between">
+            <div
+              class="info flex justify-between lg:mt-s-spacing-desktop lg:text-button-desktop"
+            >
               <p>Mellem</p>
               <p>800,- DKK</p>
             </div>
@@ -547,11 +553,13 @@
             class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
           >
             <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
+              class="spand color-black pb-2 text-abonnement-text-spand lg:text-abonnement-text-info"
             >
               Spandens mål: 80x60x50 cm
             </p>
-            <div class="info flex justify-between">
+            <div
+              class="info flex justify-between lg:mt-s-spacing-desktop lg:text-button-desktop"
+            >
               <p>Stor</p>
               <p>1000,- DKK</p>
             </div>
