--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -550,7 +550,7 @@
             />
           </div>
           <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body"
           >
             <p
               class="spand color-black pb-2 text-abonnement-text-spand lg:text-abonnement-text-info"
