--- a/src/abonnement2.html
+++ b/src/abonnement2.html
@@ -483,7 +483,7 @@
                 />
               </div>
               <div
-                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-button-desktop"
               >
                 <div class="info justify-between text-center">
                   <h3 class="">Farverig</h3>
@@ -503,7 +503,7 @@
                 />
               </div>
               <div
-                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-button-desktop"
               >
                 <div class="info justify-between text-center">
                   <h3>Neutral</h3>
@@ -555,7 +555,7 @@
                 />
               </div>
               <div
-                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-button-desktop"
               >
                 <div class="info justify-between text-center">
                   <h3>Tæt</h3>
@@ -575,7 +575,7 @@
                 />
               </div>
               <div
-                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
+                class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-button-desktop"
               >
                 <div class="info justify-between text-center">
                   <h3>Luftig</h3>
