--- a/src/index.html
+++ b/src/index.html
@@ -989,7 +989,7 @@
         <article
           itemscope
           itemtype="https://schema.org/Review"
-          class="carousel-center carousel h-[235px] overflow-y-hidden overflow-x-scroll lg:mt-l-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
+          class="carousel carousel-center h-[235px] overflow-y-hidden overflow-x-scroll lg:mt-l-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
         >
           <div itemprop="review" class="carousel-item">
             <div class="snap-center lg:w-[500px]">
