--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -501,13 +501,15 @@
           class="flex items-baseline gap-xs-spacing-mobile lg:gap-s-spacing-desktop"
         >
           <form>
-            <label class="form-control">
-              <input
-                class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
-                type="radio"
-                name="radio"
-              />
-            </label>
+            <fieldset>
+              <label class="form-control">
+                <input
+                  class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
+                  type="radio"
+                  name="radio"
+                />
+              </label>
+            </fieldset>
           </form>
           <h3 class="font-font-body text-body-mobile lg:text-body-desktop">
             Ja
