--- a/src/index.html
+++ b/src/index.html
@@ -471,13 +471,13 @@
               id="bb_blink"
               class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[400px] lg:pt-s-spacing-mobile"
               src="img/logo/bb_ill_sol.png"
-              alt="Blomster Bjarne illustration"
+              alt="Blomster Bjarne blink illustration"
             />
             <img
               id="bb_ikke_blink"
               class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[400px] lg:pt-s-spacing-mobile"
               src="img/logo/bb_ill_sol_blink.png"
-              alt="Blomster Bjarne illustration"
+              alt="Blomster Bjarne ingen blink illustration"
             />
           </figure>
           <div
