--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="style.css" />
     <style>
       header {
-        margin-bottom: var(--l-spacing-desktop);
+        /* margin-bottom: var(--xl-spacing-desktop); */
+        margin-bottom: 49px;
       }
       p {
         margin-block: 0;
@@ -389,7 +390,7 @@
       <!-- PROGRESS BAR START -->
       <section>
         <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-l-spacing-desktop"
         >
           <nav class="full_bar border-none">
             <div>
