--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -467,7 +467,7 @@
       </section>
 
       <!---------------------------------------------- ANDEN SEKTION -->
-      <label for="hyppighed"></label>
+      <label for="hyppighed">hej</label>
       <select
         class="max-w-xs mx-auto flex w-64 cursor-pointer rounded-radius-mobile border-2 border-color-black font-font-body text-body-mobile lg:text-body-desktop"
       >
