--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -467,15 +467,16 @@
       </section>
 
       <!---------------------------------------------- ANDEN SEKTION -->
-      <label for="hyppighed">hej</label>
-      <select
-        class="max-w-xs mx-auto flex w-64 cursor-pointer rounded-radius-mobile border-2 border-color-black font-font-body text-body-mobile lg:text-body-desktop"
-      >
-        <option disabled selected>-- Vælg hyppighed --</option>
-        <option class="active:bg-sol">Hver uge</option>
-        <option>Hveranden uge</option>
-        <option>Hver måned</option>
-      </select>
+      <label for="hyppighed">
+        <select
+          class="max-w-xs mx-auto flex w-64 cursor-pointer rounded-radius-mobile border-2 border-color-black font-font-body text-body-mobile lg:text-body-desktop"
+        >
+          <option disabled selected>-- Vælg hyppighed --</option>
+          <option class="active:bg-sol">Hver uge</option>
+          <option>Hveranden uge</option>
+          <option>Hver måned</option>
+        </select>
+      </label>
 
       <!---------------------------------------------- TREDJE SEKTION -->
       <section class="grid justify-center py-l-spacing-mobile">
