--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -390,7 +390,7 @@
       <!-- PROGRESS BAR START -->
       <section>
         <article
-          class="grid place-content-center pb-l-spacing-mobile lg:pb-l-spacing-desktop"
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-m-spacing-mobile"
         >
           <nav class="full_bar border-none">
             <div>
