--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -506,7 +506,7 @@
       </h2>
 
       <!------------------------------- SÅDAN GØR DU -->
-      <section class="pb-xxl-spacing-mobile lg:px-[80px]">
+      <section class="pb-xxl-spacing-mobile lg:mx-[80px]">
         <article
           class="mx-7 flex gap-10 overflow-x-scroll lg:grid lg:grid-cols-2 lg:overflow-hidden lg:overflow-x-auto"
         >
