--- a/src/blomster.html
+++ b/src/blomster.html
@@ -805,9 +805,7 @@
             <div
               class="border-t-2 border-t-color-black bg-color-white p-s-spacing-mobile text-center font-other-headings text-h5-mobile text-color-black lg:text-h5-desktop"
             >
-              <h3 class="font-other-headings" itemprop="name">
-                Vinget Hindebæger
-              </h3>
+              <h3 class="font-other-headings" itemprop="name">Hindebæger</h3>
             </div>
             <!------------------ bagsiden -->
             <div
@@ -817,7 +815,7 @@
                 class="pt-s-spacing-mobile text-center font-other-headings text-h4-mobile text-color-black lg:text-h5-desktop"
                 itemprop="name"
               >
-                Vinget Hindebæger
+                Hindebæger
               </h3>
               <!-- informationer om blomst -->
               <div
