--- a/src/vaser.html
+++ b/src/vaser.html
@@ -43,7 +43,11 @@
       }
       article img {
         height: 100%;
-        width: 100%;
+        /* margin: auto; */
+      }
+
+      .billede_vase {
+        margin: auto;
       }
 
       .article_info {
@@ -438,6 +442,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase1_2.webp"
                   alt="Lily vase"
@@ -503,6 +508,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase2_2.webp"
                   alt="Sunny vase blomst"
@@ -568,6 +574,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase4_2.webp"
                   alt="Delphi vase"
@@ -633,6 +640,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase5_2.webp"
                   alt="Bamboo vase blomst"
@@ -698,6 +706,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase6_2.webp"
                   alt="Datura vase"
@@ -763,6 +772,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase3_2.webp"
                   alt="Pansy vase blomst"
@@ -828,6 +838,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase7_2.webp"
                   alt="Daisy vase"
@@ -893,6 +904,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase8_2.webp"
                   alt="Hyacinth vase blomst"
@@ -958,6 +970,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase9_2.webp"
                   alt="Poppy vase"
@@ -1023,6 +1036,7 @@
               </div>
               <div class="billede_wrapper">
                 <img
+                  class="billede_vase"
                   itemprop="image"
                   src="/img/vaser/vase10_2.webp"
                   alt="Flax vase blomst"
@@ -1084,7 +1098,7 @@
       <section
         class="pt-l-spacing-mobile pb-xl-spacing-mobile text-center font-font-body text-body-mobile lg:py-l-spacing-desktop"
       >
-        <p class="text-left lg:mx-auto lg:w-2/3 lg:pb-xl-spacing-desktop">
+        <p class="text-left lg:mx-auto lg:w-2/3">
           Øv, du er nået til enden. Har du ingen blomster at dekorere din nye
           vase med? Frygt ej! Bestil et abonnement på under 2 min, og få leveret
           friske buketter til hoveddøren.
@@ -1110,7 +1124,7 @@
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
     >
       <article
-        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
+        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:w-full lg:pt-xl-spacing-desktop"
       >
         <!-- primær indhold -->
         <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
