--- a/src/index.html
+++ b/src/index.html
@@ -411,7 +411,7 @@
           <li>
             <a
               tabindex="0"
-              href="#"
+              href="index.html"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Begivenheder</a
             >
@@ -419,7 +419,7 @@
           <li>
             <a
               tabindex="0"
-              href="#"
+              href="index.html"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Kontakt os</a
             >
@@ -989,7 +989,7 @@
         <article
           itemscope
           itemtype="https://schema.org/Review"
-          class="carousel carousel-center h-[235px] overflow-y-hidden overflow-x-scroll lg:mt-l-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
+          class="carousel-center carousel h-[235px] overflow-y-hidden overflow-x-scroll lg:mt-l-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
         >
           <div itemprop="review" class="carousel-item">
             <div class="snap-center lg:w-[500px]">
@@ -1246,10 +1246,10 @@
             </h2>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a tabindex="0" href="#">Om os</a>
+                <a tabindex="0" href="index.html">Om os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a tabindex="0" href="#">Kontakt os</a>
+                <a tabindex="0" href="index.html">Kontakt os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
                 <a tabindex="0" href="sitemap.html">Sitemap</a>
