--- a/src/index.html
+++ b/src/index.html
@@ -373,22 +373,24 @@
             >
           </li>
           <div class="dropdown">
-            <label>
-              <button class="flex">
-                <p
-                  tabindex="0"
-                  class="font-other-headings text-h3-mobile lg:text-h5-desktop"
-                >
-                  Sortiment
-                </p>
-                <svg class="pb-2" width="40" height="40" viewBox="0 0 24 24">
-                  <path
-                    fill="#000000"
-                    d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"
-                  />
-                </svg>
-              </button>
-            </label>
+            <form>
+              <label>
+                <button class="flex">
+                  <p
+                    tabindex="0"
+                    class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+                  >
+                    Sortiment
+                  </p>
+                  <svg class="pb-2" width="40" height="40" viewBox="0 0 24 24">
+                    <path
+                      fill="#000000"
+                      d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"
+                    />
+                  </svg>
+                </button>
+              </label>
+            </form>
             <ul class="underkat m-0">
               <li class="pt-[0.18cm]">
                 <a
