--- a/src/index.html
+++ b/src/index.html
@@ -1191,7 +1191,7 @@
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
                 <p>
-                  <a href="tel:+4539629059"></a> Tlf.:
+                  <a href="index.html" href="tel:+4539629059"></a> Tlf.:
                   <span itemprop="telephone">+45 39 62 90 59</span>
                 </p>
               </address>
@@ -1210,7 +1210,7 @@
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
                 <p>
-                  <a href="tel:+4536260700"></a>
+                  <a href="index.html" href="tel:+4536260700"></a>
                   Tlf.: <span itemprop="telephone">+45 36 26 07 00</span>
                 </p>
               </address>
@@ -1229,7 +1229,7 @@
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
                 <p>
-                  <a href="tel:+4526117006"></a>Tlf.:
+                  <a href="index.html" href="tel:+4526117006"></a>Tlf.:
                   <span itemprop="telephone">+45 26 11 70 06</span>
                 </p>
               </address>
