--- a/src/index.html
+++ b/src/index.html
@@ -1190,10 +1190,10 @@
                   ><span itemprop="addressLocality"> Hellerup</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="index.html" href="tel:+4539629059"></a> Tlf.:
-                  <span itemprop="telephone">+45 39 62 90 59</span>
-                </p>
+
+                <a href="tel:+4539629059"
+                  >Tlf.: <span itemprop="telephone">+45 39 62 90 59</span></a
+                >
               </address>
 
               <address
@@ -1209,10 +1209,10 @@
                   ><span itemprop="addressLocality"> København Ø</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="index.html" href="tel:+4536260700"></a>
-                  Tlf.: <span itemprop="telephone">+45 36 26 07 00</span>
-                </p>
+
+                <a href="tel:+4536260700"
+                  >Tlf.: <span itemprop="telephone">+45 36 26 07 00</span></a
+                >
               </address>
 
               <address
@@ -1228,10 +1228,10 @@
                   ><span itemprop="addressLocality"> København V</span>
                 </p>
                 <p><span itemprop="addressLocality">Danmark</span></p>
-                <p>
-                  <a href="index.html" href="tel:+4526117006"></a>Tlf.:
-                  <span itemprop="telephone">+45 26 11 70 06</span>
-                </p>
+
+                <a href="tel:+4526117006"
+                  >Tlf.: <span itemprop="telephone">+45 26 11 70 06</span></a
+                >
               </address>
             </div>
           </section>
